@@ -38,7 +38,7 @@
         By typing search terms into the deskbar entry in your panel you are presented with
         the search results as you type.</p>
         
-        <p>Seaches are handled by a series of plugins. Deskbar-Applet provides a simple interface
+        <p>Searches are handled by a series of plugins. Deskbar-Applet provides a simple interface
         to manage these plugins to provide you with the search results that fit your needs.</p>
         
         <p>A related idea was published earlier as <a href="http://live.gnome.org/AuricApplet">Auric Applet</a>.
@@ -114,7 +114,7 @@
    	    	<b>Stable</b> version 2.22.2.1 released. Changes since 2.22.1:
    	    	<ul>	
    	    		<li>Fixed bug #534972: Exception in DeliciousHandler</li>
-   	    		<li>When checking firefox version. Wait until the process terminated to avoid zombie processes.</li>
+   	    		<li>When checking Firefox version. Wait until the process terminated to avoid zombie processes.</li>
 				<li>Fixed bug #520278: Window in sticky mode too small</li>
 				<li>desklicious.py: Replace all whitespaces in query with spaces.
 				Catch exception that might appear during parsing and cleanup correctly in any case. (fixes bug #484667)</li>
@@ -124,7 +124,7 @@
 				<li>Fixed bug #530057: Catch GError when making beagle call</li>
 				<li>Fixed bug #527023: KeyError in beagle-live, when only directories are returned by beagle</li>
 				<li>Fixed bug #522585: Crash when changing default browser</li>
-				<li>Added support for iceweasel browser. When the default browser is changed mozilla and iceweasel are supported, too. When Firefox is used and the command must contain firefox instead of being exactly firefox</li>
+				<li>Added support for Iceweasel browser. When the default browser is changed Mozilla and Iceweasel are supported, too. When Firefox is used and the command must contain Firefox instead of being exactly Firefox</li>
 				<li>Use subprocess module instead of os.popen. Catch OSError when retrieving version (fixes bug #533842)</li>
    	    	</ul>
    	    	<a href="download.html">Download it</a>
