@@ -1,3 +1,8 @@
+2008-07-16	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
+	* index.html:
+	Fixed some typos (fixes bug #540110)
+	
 2008-06-30	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
 	* download.html:
